--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer utilities {
+  .bg-gradient-blue {
+    @apply bg-gradient-to-r from-[#0179FE] to-[#4893FF];
+  }
+}
