--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .bg-gradient-blue {
     @apply bg-gradient-to-r from-[#0179FE] to-[#4893FF];
+  }
+}
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
   }
 }
